# chatllm.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README_CN.md  README_ZH.md  README_ja.md  README_zh.md  basics.h  chat.cpp  chat.h  convert.py  custom_ops.cpp  layers.cpp  layers.h  main.cpp  models.cpp  models.h  requirements.txt  sentence_processor.cpp  sentence_processor.h  test.cpp  tokenizer.cpp  tokenizer.h  unicode.h  vectorstore.cpp  vectorstore.h
.github/: labeler.yml
.github/actions/get-tag-name/: action.yml
.github/actions/install-exe/: action.yml
.github/actions/linux-setup-spacemit/: action.yml
.github/actions/linux-setup-vulkan/: action.yml
.github/actions/unarchive-tar/: action.yml
.github/actions/windows-setup-cuda/: action.yml
.github/actions/windows-setup-curl/: action.yml
.github/workflows/: build-linux-cross.yml  build.yml  labeler.yml
bindings/: .gitignore  chatllm.erl  chatllm.js  chatllm.py  chatllm.ts  chatllm_port.nim  chatllm_st.py  crosstask.py  libchatllm.h  libchatllm.nim  libchatllm.pas  main.c  main.dpr  main.nim  nim.cfg  openai.ts  openai_api.py  openai_api.ts  server.nim  tool_glm3.py  tool_glm4.py  tool_mistral.py  tool_qwen.py
cmake/: riscv64-spacemit-linux-gnu-gcc.cmake
docs/: binding.md  fun.md  ggmm.md  gpu.md  grok.md  models.md  multimodal.md  quick_start.md  rag.md  rpc.md  tool_calling.md
ggml/: CMakeLists.txt
ggml/cmake/: ggml-config.cmake.in
ggml/include/: ggml-alloc.h  ggml-backend.h  ggml-rpc.h  ggml.h
ggml/include/ggml/: ggml.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml-quants.c  ggml-vulkan.cpp  ggml.c  gguf.cpp
ggml/src/ggml-cann/: acl_tensor.cpp  acl_tensor.h  aclnn_ops.cpp  aclnn_ops.h  common.h  ggml-cann.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  vec.h
ggml/src/ggml-cpu/arch/loongarch/: quants.c
ggml/src/ggml-cpu/kleidiai/: kernels.cpp  kernels.h  kleidiai.cpp
ggml/src/ggml-cpu/spacemit/: ime.cpp  ime.h  ime1_kernels.cpp  ime_kernels.h
ggml/src/ggml-cuda/: argsort.cu  common.cuh  cpy-utils.cuh  cpy.cu  fattn-mma-f16.cuh  fattn-tile-f32.cu  fattn-vec-f32.cuh  fattn.cu  ggml-cuda.cu  mmq.cu  mmq.cuh  mmvq.cu  quantize.cu  quantize.cuh  rope.cu  ssm-scan.cu
ggml/src/ggml-cuda/template-instances/: generate_cu_files.py
ggml/src/ggml-cuda/vendors/: hip.h
ggml/src/ggml-hexagon/: CMakeLists.txt  ggml-hexagon.cpp  htp-utils.c  htp-utils.h  op-desc.h
ggml/src/ggml-hexagon/htp/: CMakeLists.txt  act-ops.c  binary-ops.c  htp-dma.c  htp-dma.h  htp-msg.h  htp-ops.h  hvx-exp.c  hvx-inverse.c  hvx-sigmoid.c  hvx-utils.c  hvx-utils.h  main.c  matmul-ops.c  ops-utils.h  rope-ops.c  softmax-ops.c  unary-ops.c
ggml/src/ggml-metal/: ggml-metal.cpp  ggml-metal.m  ggml-metal.metal
ggml/src/ggml-musa/: CMakeLists.txt
ggml/src/ggml-opencl/: CMakeLists.txt  ggml-opencl.cpp
ggml/src/ggml-opencl/kernels/: add.cl  cvt.cl  flash_attn_f16.cl  flash_attn_f32.cl  flash_attn_f32_f16.cl  get_rows.cl  glu.cl  mean.cl  mul_mm_f16_f32_l4_lm.cl  mul_mm_f32_f32_l4_lm.cl  norm.cl  rms_norm.cl  scale.cl  set_rows.cl  softmax_4_f16.cl  softmax_4_f32.cl  softmax_f16.cl  softmax_f32.cl  transpose.cl
ggml/src/ggml-rpc/: CMakeLists.txt  ggml-rpc.cpp
ggml/src/ggml-sycl/: CMakeLists.txt  backend.hpp  binbcast.cpp  common.hpp  concat.cpp  conv.cpp  convert.cpp  cpy.cpp  dequantize.hpp  dmmv.cpp  element_wise.cpp  element_wise.hpp  gemm.hpp  getrows.cpp  ggml-sycl.cpp  gla.cpp  im2col.cpp  mmq.cpp  mmvq.cpp  norm.cpp  pad.cpp  pad_reflect_1d.cpp  pad_reflect_1d.hpp  quants.hpp  rope.cpp  set_rows.cpp  softmax.cpp  ssm_conv.cpp  tsembd.cpp  vecdotq.hpp  wkv.cpp
ggml/src/ggml-sycl/dpct/: helper.hpp
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  dequant_funcs_cm2.comp  flash_attn.comp  flash_attn_base.comp  flash_attn_cm1.comp  flash_attn_cm2.comp  flash_attn_split_k_reduce.comp  glu_head.comp  mul_mm_cm2.comp  mul_mmq.comp  rms_norm.comp  rope_funcs.glsl  soft_max.comp  vulkan-shaders-gen.cpp
ggml/src/ggml-webgpu/: CMakeLists.txt  ggml-webgpu.cpp
ggml/src/ggml-webgpu/wgsl-shaders/: bin_op.tmpl.wgsl  binary_head.tmpl  common_decls.tmpl  cpy.tmpl.wgsl  cpy.wgsl  embed_wgsl.py  get_rows.tmpl.wgsl  glu.tmpl.wgsl  memset.wgsl  mul_mat.tmpl.wgsl  mul_mat.wgsl  mul_mat_decls.tmpl  mul_mat_reg_tile.tmpl.wgsl  mul_mat_subgroup_matrix.tmpl.wgsl  mul_mat_vec.tmpl.wgsl  rms_norm.wgsl  rope.tmpl.wgsl  scale.tmpl.wgsl  set_rows.tmpl.wgsl  set_rows.wgsl  soft_max.tmpl.wgsl  unary_op.wgsl
ggml/src/ggml-zdnn/: ggml-zdnn.cpp
ggml/src/ggml-zendnn/: CMakeLists.txt  ggml-zendnn.cpp
ggml/tests/: test0.zig  test1.zig  test2.zig  test3.zig
models/: adept.cpp  allenai.cpp  allenai.h  alphageo.cpp  apertus.cpp  apriel.cpp  aquila.cpp  baichuan.cpp  bailing.cpp  bce.cpp  bce.h  bge.cpp  bluelm.cpp  characterglm.cpp  chatglm.cpp  chatglm.h  chatglm_v1.cpp  chatglm_v2.cpp  chatglm_v3.cpp  codefuse.cpp  codegeex.cpp  codegeex_v2.cpp  codellama.cpp  codellama.h  cohere.cpp  decilm.cpp  deepseek.cpp  deepseek.h  deepseek_coder.cpp  dolphinphi2.cpp  dots.cpp  ernie.cpp  ernie.h  exaone.cpp  falcon.cpp  gemma.cpp  gemma.h  gemma4.cpp  gigachat.cpp  glm_vl.cpp  (+72 more)
scripts/: .gitignore  binding.py  chat_ui.html  chatllm_st.py  crosstask.py  html2md.py  model_downloader.py  models.json  openai_api.py  richchat.py  server.nim  threecobblers.py  tool_codegeex4.py  tool_deepseekcoder.py  tool_definition.py  tool_glm3.py  tool_glm4.py  tool_groq.py  tool_internlm.py  tool_llama3.1.py  tool_mistral.py  tool_numinamath.py  tool_qwen.py  tool_qwen2.5.py  tool_watt.py  translation_agent.py  ya_o1.py  ya_r1.py
src/: JSON.h  audio_process.cpp  audio_process.h  backend.cpp  backend.h  basics.h  chat.cpp  chat.h  chat_encoders.cpp  chat_encoders.h  custom_ops.cpp  layers.cpp  layers.h  main.cpp  models.cpp  models.h  models_priv.h  tokenizer.cpp  tokenizer.h  unicode.cpp  unicode.h  vectorstore.cpp  vision_process.cpp  vision_process.h
(+2 files in other folders)
